--- a/styles/styles.css
+++ b/styles/styles.css
@@ -1,8 +1,8 @@
 body {
     font-family: Arial, Helvetica, sans-serif;
     font-size: 15px;
-    color: dimgray;
-    background-color: rgb(0, 127, 129);
+    color: rgb(0, 0, 0);
+    background-color: rgb(216, 216, 216);
 }
 li {
     font-size: 13px;
@@ -19,4 +19,12 @@ li {
     background-image: url('../images/grey_sky.jpg');
     background-position: top left;
     background-size: cover;
+}
+a {
+    color: rgb(139, 0, 0);
+    text-decoration: none;
+}
+a:hover {
+    text-decoration: underline;
+    color:black
 }
