--- a/styles/styles.css
+++ b/styles/styles.css
@@ -28,3 +28,12 @@ a:hover {
     text-decoration: underline;
     color:black
 }
+.box1 {
+    border: 1px solid grey;
+}
+.box2 {
+    padding: 5px;
+}
+.box3 {
+    margin: 50px;
+}
