--- a/styles/styles.css
+++ b/styles/styles.css
@@ -4,16 +4,10 @@ body {
     color: rgb(0, 0, 0);
     background-color: rgb(216, 216, 216);
 }
-li {
-    font-size: 13px;
-    color: black;
+.resume_paragraph {
+    font-size: 20px;
+    color: rgb(0, 0, 0);
     font-weight: normal;
-}
-.bold {
-    font-weight: bold;
-}
-.justify {
-    text-align: justify;
 }
 a {
     color: rgb(32, 0, 139);
