--- a/styles/styles.css
+++ b/styles/styles.css
@@ -13,9 +13,13 @@ body {
     font-weight: bold;
 }
 a {
-    color: rgb(32, 0, 139);
+    color: rgb(0, 8, 255);
     text-decoration: none;
 }
+.white_link {
+    color: white;
+    text-decoration: none;
+}   
 a:hover {
     text-decoration: underline;
     color:black
@@ -29,3 +33,13 @@ a:hover {
 .box3 {
     margin: 50px;
 }
+.link_hidden {
+    text-decoration: none;
+    color: black;
+}
+h1 {
+    text-align: center;
+}
+/* h2 {
+    text-align: center;
+} */
