--- a/styles/layoutstyles.css
+++ b/styles/layoutstyles.css
@@ -1,84 +1,10 @@
 /* body {
     background-color: white;
     font-family: Arial, Helvetica, sans-serif;
-}
-
-.common {
-    background-color: white;
-}
-
-.header {
-    top: 5px;
-    left: 5px;
-    right: 5px;
-    height: 100px;
-    z-index: 2;
-    border-bottom: 1px solid black;
-
-
-    background-image: url('../images/piano-keyboard.jpg');
-    background-color: rgba(0, 0, 0, 0.4);
-    background-blend-mode: darken;
-    background-size: cover;
-    background-position: center;
-    color: white;
-    text-shadow: 1px 1px 3px black;
-}
-
-.left {
-    top: 114px;
-    width: 100px;
-    bottom: 39px;
-    z-index: 1;
-    padding-top: 30px;
-    border-right: 1px solid black;
-    padding-right: 5px;
-    background-image: url('../images/notes_bg.jpg');
-}
-
-
-.mainbody {
-    top: 114px;
-    left: 114px;
-    right: 114px;
-    bottom: 39px;
-    padding-left: 5px;
-    padding-right: 5px;
-}
-
-.right {
-    top: 114px;
-    width: 100px;
-    right: 5px;
-    bottom: 39px;
-    border-left: 1px solid black;
-    padding-left: 5px;
-    background-image: url('../images/notes_bg.jpg');
-}
-
-.footer {
-    bottom: 5px;
-    left: 5px;
-    right: 5px;
-    height: 25px;
-    font-size: 8px;
-    text-align: center;
-    padding-top: 15px;
-    position: fixed;
-}
-
-.subheader {
-    float: right;   
+    margin: 0;
 } */
 
 
-body {
-    background-color: white;
-    font-family: Arial, Helvetica, sans-serif;
-    margin: 0;
-}
-
-/* Header stays at top normally */
 .header {
     height: 100px;
     border-bottom: 1px solid black;
@@ -93,14 +19,7 @@ body {
     text-shadow: 1px 1px 3px black;
 }
 
-/* Layout below header */
-/* .layout {
-    display: flex;
-    width: 100%;
-    min-height: calc(100vh - 100px - 40px);
-} */
 
-/* Left Sidebar */
 .left {
     width: 100px;
     padding: 30px 5px;
@@ -109,10 +28,10 @@ body {
     background-repeat: repeat;
     background-size: auto; 
     position: relative;
-    z-index: 2; /* above footer */
+    z-index: 2;
 }
 
-/* Main Content */
+
 .mainbody {
     flex: 1;
     padding: 20px;
@@ -126,24 +45,24 @@ body {
     background-repeat: repeat;
     background-size: auto; 
     position: relative;
-    z-index: 2; /* above footer */
+    z-index: 2;
 }
 
-/* Footer stays at bottom */
+
 .footer {
     height: 40px;
     text-align: center;
     padding-top: 10px;
     font-size: 10px;
     position: relative;
-    z-index: 1; /* BELOW sidebars */
+    z-index: 1; 
 }
 
 .layout.container {
     display: flex;
     align-items: stretch;
-    min-height: calc(100vh - 40px); /* subtract footer height */
+    min-height: calc(100vh - 40px); 
     position: relative;
-    z-index: 2; /* so sidebars sit on top */
+    z-index: 2; 
 }
 
