--- a/styles/styles.css
+++ b/styles/styles.css
@@ -2,15 +2,12 @@ body {
     font-family: Arial, Helvetica, sans-serif;
     font-size: 15px;
     color: rgb(0, 0, 0);
-    background-color: rgb(216, 216, 216);
+    background-color: rgb(240, 240, 240);
 }
 .resume_paragraph {
     font-size: 20px;
     color: rgb(0, 0, 0);
     font-weight: normal;
-}
-.bold {
-    font-weight: bold;
 }
 a {
     color: rgb(0, 8, 255);
@@ -22,16 +19,7 @@ a {
 }   
 a:hover {
     text-decoration: underline;
-    color:black
-}
-.box1 {
-    border: 1px solid grey;
-}
-.box2 {
-    padding: 5px;
-}
-.box3 {
-    margin: 50px;
+    color:rgb(118, 118, 118)
 }
 .link_hidden {
     text-decoration: none;
@@ -40,6 +28,3 @@ a:hover {
 h1 {
     text-align: center;
 }
-/* h2 {
-    text-align: center;
-} */
